fixed weird spacing

--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ input {
 .card {
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.5) ;
-    display: flex;
+
 }
 
 .bd-placeholder-img{
@@ -137,6 +137,7 @@ input {
 .card_thumb{
     border-radius: 20px;
     opacity: 0.9;
+    margin-top: .3em;
 }
 
 .card-text{
